Demonstrate command line flags